--- a/Vendimia TFG/memoria_tfg.tex
+++ b/Vendimia TFG/memoria_tfg.tex
@@ -81,7 +81,7 @@
 
  \include{contido/introducion}
  \include{contido/tecnologias}
- \include{contido/demo}
+ \include{contido/metodologias}
 %\include{contido/...}
  \include{contido/conclusions}
 
